--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* google font */
+
+@import url('https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,400;0,500;0,600;0,800;1,700&display=swap');
+
+body{
+    font-family: 'Exo 2', sans-serif;
+}
+
+.profile-image{
+    width: 50px;
+    height: 50px;
+}
